[gd_scene load_steps=45 format=2]

[ext_resource path="res://Source/Menu/VMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://Source/Button/Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://Source/Main/Menu.gd" type="Script" id=3]
[ext_resource path="res://Assets/Fonts/no_virus/No Virus.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/Graphics/Textures/old_paper.png" type="Texture" id=5]
[ext_resource path="res://Source/Gameplay/HUD/StartGameMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://Source/Gameplay/HUD/OptionsMenu.tscn" type="PackedScene" id=7]
[ext_resource path="res://Source/Menu/HMenu.tscn" type="PackedScene" id=8]
[ext_resource path="res://Source/Gameplay/HUD/AboutMenu.tscn" type="PackedScene" id=9]
[ext_resource path="res://Source/TextureButton/SmartTextureButton.tscn" type="PackedScene" id=10]
[ext_resource path="res://Assets/Graphics/HomeScreen/BattleButton.png" type="Texture" id=11]
[ext_resource path="res://Assets/Graphics/HomeScreen/MenuButton.png" type="Texture" id=12]
[ext_resource path="res://Assets/Graphics/HomeScreen/NotificationButton.png" type="Texture" id=13]
[ext_resource path="res://Assets/Graphics/HomeScreen/LevelState.png" type="Texture" id=14]
[ext_resource path="res://Assets/Graphics/HomeScreen/WalletConnectButton.png" type="Texture" id=15]
[ext_resource path="res://Assets/Graphics/HomeScreen/DiscordButton.png" type="Texture" id=16]
[ext_resource path="res://Assets/Graphics/HomeScreen/TwitterButton.png" type="Texture" id=17]
[ext_resource path="res://Assets/Graphics/HomeScreen/ShopButton.png" type="Texture" id=18]
[ext_resource path="res://Assets/Graphics/HomeScreen/BannerUpdates.png" type="Texture" id=19]
[ext_resource path="res://Assets/customisation/Frame-1.png" type="Texture" id=20]
[ext_resource path="res://Assets/customisation/Avatar-2.png" type="Texture" id=21]
[ext_resource path="res://Assets/customisation/Avatar-4.png" type="Texture" id=22]
[ext_resource path="res://Assets/customisation/Avatar-1.png" type="Texture" id=23]
[ext_resource path="res://Assets/customisation/Avatar-6.png" type="Texture" id=24]
[ext_resource path="res://Assets/customisation/Avatar-5.png" type="Texture" id=25]
[ext_resource path="res://Assets/customisation/Avatar-7.png" type="Texture" id=26]
[ext_resource path="res://Assets/customisation/Avatar-3.png" type="Texture" id=27]
[ext_resource path="res://Assets/customisation/Frame-2.png" type="Texture" id=28]
[ext_resource path="res://Assets/customisation/Frame-3.png" type="Texture" id=29]
[ext_resource path="res://Assets/customisation/Frame-4.png" type="Texture" id=30]
[ext_resource path="res://Assets/customisation/Frame-5.png" type="Texture" id=31]
[ext_resource path="res://Assets/customisation/Frame-7.png" type="Texture" id=32]
[ext_resource path="res://Assets/customisation/Frame-6.png" type="Texture" id=33]

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 961, 146 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 327, 186 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "move_in"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( -2, -2, 1 ),
"update": 0,
"values": [ Vector2( 1279, 146 ), Vector2( 1279, 146 ), Vector2( 952, 146 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "scale"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( -2, -2, -2 ),
"update": 0,
"values": [ Vector2( 952, 146 ), Vector2( 983, 146 ), Vector2( 952, 146 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( -2, -2, -2 ),
"update": 0,
"values": [ Vector2( 327, 186 ), Vector2( 296, 186 ), Vector2( 327, 186 ) ]
}

[sub_resource type="DynamicFont" id=12]
size = 36
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxTexture" id=13]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 800, 500 )
modulate_color = Color( 0.517647, 0.517647, 0.517647, 1 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 12 )
LineEdit/colors/clear_button_color = Color( 0.88, 0.88, 0.88, 1 )
LineEdit/colors/clear_button_color_pressed = Color( 1, 1, 1, 1 )
LineEdit/colors/cursor_color = Color( 0.94, 0.94, 0.94, 1 )
LineEdit/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
LineEdit/colors/font_color_selected = Color( 0, 0, 0, 1 )
LineEdit/colors/font_color_uneditable = Color( 0.88, 0.88, 0.88, 0.5 )
LineEdit/colors/selection_color = Color( 0.49, 0.49, 0.49, 1 )
LineEdit/constants/minimum_spaces = 12
LineEdit/fonts/font = SubResource( 12 )
LineEdit/icons/clear = null
LineEdit/styles/focus = SubResource( 13 )
LineEdit/styles/normal = SubResource( 13 )
LineEdit/styles/read_only = SubResource( 13 )

[sub_resource type="DynamicFont" id=8]
size = 48
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 36
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 32
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=1]
size = 48
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="PlayOnline" parent="." instance=ExtResource( 10 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -202.0
margin_top = 162.0
margin_right = 178.0
margin_bottom = 262.0
rect_min_size = Vector2( 380, 100 )
texture_normal = ExtResource( 11 )

[node name="Options" parent="." instance=ExtResource( 10 )]
margin_left = 41.0
margin_top = 22.0
margin_right = 143.0
margin_bottom = 124.0
rect_min_size = Vector2( 102, 102 )
texture_normal = ExtResource( 12 )

[node name="Notifications" parent="." instance=ExtResource( 10 )]
margin_left = 155.0
margin_top = 20.0
margin_right = 257.0
margin_bottom = 122.0
rect_min_size = Vector2( 102, 102 )
texture_normal = ExtResource( 13 )

[node name="LevelStat" type="TextureRect" parent="."]
margin_left = 272.0
margin_top = 1.0
margin_right = 527.0
margin_bottom = 146.0
texture = ExtResource( 14 )
expand = true
stretch_mode = 6

[node name="BannerUpdate" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -319.0
margin_top = 146.0
margin_right = 8.0
margin_bottom = 332.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource( 19 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="BannerUpdate"]
autoplay = "move_in"
anims/RESET = SubResource( 9 )
anims/move_in = SubResource( 10 )
anims/scale = SubResource( 11 )

[node name="WalletConnect" parent="." instance=ExtResource( 10 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -288.0
margin_top = 30.0
margin_right = -34.0
margin_bottom = 118.0
rect_min_size = Vector2( 254, 88 )
texture_normal = ExtResource( 15 )

[node name="Discord" parent="." instance=ExtResource( 10 )]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 27.0
margin_top = -118.0
margin_right = 287.0
margin_bottom = -26.0
rect_min_size = Vector2( 254, 88 )
texture_normal = ExtResource( 16 )

[node name="Twitter" parent="." instance=ExtResource( 10 )]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -246.0
margin_top = -122.0
margin_right = -144.0
margin_bottom = -20.0
rect_min_size = Vector2( 102, 102 )
texture_normal = ExtResource( 17 )

[node name="Shop" parent="." instance=ExtResource( 10 )]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -139.0
margin_top = -120.0
margin_right = -37.0
margin_bottom = -18.0
rect_min_size = Vector2( 102, 102 )
texture_normal = ExtResource( 18 )

[node name="Overlay" type="CanvasLayer" parent="."]

[node name="StartGameOverlay" type="ColorRect" parent="Overlay"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.686275 )

[node name="StartGameMenu" parent="Overlay/StartGameOverlay" instance=ExtResource( 6 )]

[node name="AboutMenu" parent="Overlay" instance=ExtResource( 9 )]
visible = false

[node name="OptionsOverlay" type="ColorRect" parent="Overlay"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.686275 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsMenu" parent="Overlay/OptionsOverlay" instance=ExtResource( 7 )]

[node name="OfflineOverlay" type="ColorRect" parent="Overlay"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.25098 )

[node name="Container" type="TextureRect" parent="Overlay/OfflineOverlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -126.0
margin_right = 240.0
margin_bottom = 126.0
rect_min_size = Vector2( 480, 252 )
theme = SubResource( 3 )
texture = ExtResource( 5 )
expand = true

[node name="Info" type="VBoxContainer" parent="Overlay/OfflineOverlay/Container"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -226.0
rect_min_size = Vector2( 260, 252 )

[node name="MarginTop" type="ColorRect" parent="Overlay/OfflineOverlay/Container/Info"]
margin_right = 480.0
margin_bottom = 5.0
rect_min_size = Vector2( 0, 5 )
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="Overlay/OfflineOverlay/Container/Info"]
margin_top = 9.0
margin_right = 480.0
margin_bottom = 58.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 8 )
text = "Offline Game"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginMid1" type="ColorRect" parent="Overlay/OfflineOverlay/Container/Info"]
margin_top = 62.0
margin_right = 480.0
margin_bottom = 67.0
rect_min_size = Vector2( 0, 5 )
color = Color( 0, 0, 0, 1 )

[node name="Info" type="Label" parent="Overlay/OfflineOverlay/Container/Info"]
margin_top = 71.0
margin_right = 480.0
margin_bottom = 108.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "Number of players? *"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginMid2" type="ColorRect" parent="Overlay/OfflineOverlay/Container/Info"]
margin_top = 112.0
margin_right = 480.0
margin_bottom = 117.0
rect_min_size = Vector2( 0, 5 )
color = Color( 0, 0, 0, 1 )

[node name="PlayersRange" type="SpinBox" parent="Overlay/OfflineOverlay/Container/Info"]
margin_top = 121.0
margin_right = 480.0
margin_bottom = 170.0
rect_min_size = Vector2( 0, 49 )
min_value = 2.0
max_value = 6.0
value = 2.0
align = 1

[node name="MarginMid3" type="ColorRect" parent="Overlay/OfflineOverlay/Container/Info"]
margin_top = 174.0
margin_right = 480.0
margin_bottom = 179.0
rect_min_size = Vector2( 0, 5 )
color = Color( 0, 0, 0, 1 )

[node name="HMenu" parent="Overlay/OfflineOverlay/Container/Info" instance=ExtResource( 8 )]
margin_top = 183.0
margin_right = 480.0
margin_bottom = 243.0
size_flags_vertical = 3

[node name="MarginLeft" type="Label" parent="Overlay/OfflineOverlay/Container/Info/HMenu"]
margin_top = 11.0
margin_bottom = 48.0

[node name="Cancel" parent="Overlay/OfflineOverlay/Container/Info/HMenu" instance=ExtResource( 2 )]
margin_left = 20.0
margin_right = 220.0
custom_fonts/font = SubResource( 5 )
text = "Cancel"
flat = true

[node name="MarginMid" type="Label" parent="Overlay/OfflineOverlay/Container/Info/HMenu"]
margin_left = 240.0
margin_top = 11.0
margin_right = 240.0
margin_bottom = 48.0

[node name="Create" parent="Overlay/OfflineOverlay/Container/Info/HMenu" instance=ExtResource( 2 )]
margin_left = 260.0
margin_right = 460.0
custom_fonts/font = SubResource( 5 )
text = "Create"
flat = true

[node name="MarginRight" type="Label" parent="Overlay/OfflineOverlay/Container/Info/HMenu"]
margin_left = 480.0
margin_top = 11.0
margin_right = 480.0
margin_bottom = 48.0

[node name="MarginBottom" type="ColorRect" parent="Overlay/OfflineOverlay/Container/Info"]
margin_top = 247.0
margin_right = 480.0
margin_bottom = 252.0
rect_min_size = Vector2( 0, 5 )
color = Color( 0, 0, 0, 1 )

[node name="QuitConfirm" type="ColorRect" parent="Overlay"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.686275 )

[node name="ColorRect" type="TextureRect" parent="Overlay/QuitConfirm"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -210.0
margin_top = -140.0
margin_right = 210.0
margin_bottom = 189.0
texture = ExtResource( 5 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="Overlay/QuitConfirm/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VMenu" parent="Overlay/QuitConfirm/ColorRect/MarginContainer" instance=ExtResource( 1 )]
margin_right = 420.0
margin_bottom = 329.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginTop" type="ColorRect" parent="Overlay/QuitConfirm/ColorRect/MarginContainer/VMenu"]
margin_right = 420.0
margin_bottom = 5.0
rect_min_size = Vector2( 0, 5 )
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="Overlay/QuitConfirm/ColorRect/MarginContainer/VMenu"]
margin_top = 25.0
margin_right = 420.0
margin_bottom = 88.0
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "Quit Game?"
align = 1
valign = 1
autowrap = true

[node name="MarginMid1" type="ColorRect" parent="Overlay/QuitConfirm/ColorRect/MarginContainer/VMenu"]
margin_top = 108.0
margin_right = 420.0
margin_bottom = 113.0
rect_min_size = Vector2( 0, 5 )
color = Color( 0, 0, 0, 1 )

[node name="quit_confirm" parent="Overlay/QuitConfirm/ColorRect/MarginContainer/VMenu" instance=ExtResource( 2 )]
margin_top = 133.0
margin_right = 420.0
margin_bottom = 196.0
custom_fonts/font = SubResource( 2 )
text = "Yes"
flat = true

[node name="MarginMid2" type="ColorRect" parent="Overlay/QuitConfirm/ColorRect/MarginContainer/VMenu"]
margin_top = 216.0
margin_right = 420.0
margin_bottom = 221.0
rect_min_size = Vector2( 0, 5 )
color = Color( 0, 0, 0, 1 )

[node name="quit_cancel" parent="Overlay/QuitConfirm/ColorRect/MarginContainer/VMenu" instance=ExtResource( 2 )]
margin_top = 241.0
margin_right = 420.0
margin_bottom = 304.0
custom_fonts/font = SubResource( 2 )
text = "No"
flat = true

[node name="MarginBottom" type="ColorRect" parent="Overlay/QuitConfirm/ColorRect/MarginContainer/VMenu"]
margin_top = 324.0
margin_right = 420.0
margin_bottom = 329.0
rect_min_size = Vector2( 0, 5 )
color = Color( 0, 0, 0, 1 )

[node name="middle" type="Node2D" parent="."]

[node name="Avatar-1" type="Sprite" parent="middle"]
visible = false
position = Vector2( 625, 300 )
scale = Vector2( 1.11515, 1.27947 )
texture = ExtResource( 23 )

[node name="Avatar-2" type="Sprite" parent="middle"]
visible = false
position = Vector2( 627, 300 )
scale = Vector2( 1.11515, 1.27947 )
texture = ExtResource( 21 )

[node name="Avatar-3" type="Sprite" parent="middle"]
visible = false
position = Vector2( 625, 307 )
scale = Vector2( 1.11515, 1.27947 )
texture = ExtResource( 27 )

[node name="Avatar-4" type="Sprite" parent="middle"]
visible = false
position = Vector2( 625, 298 )
scale = Vector2( 1.11515, 1.27947 )
texture = ExtResource( 22 )

[node name="Avatar-5" type="Sprite" parent="middle"]
visible = false
position = Vector2( 611, 300 )
scale = Vector2( 1.11515, 1.27947 )
texture = ExtResource( 25 )

[node name="Avatar-6" type="Sprite" parent="middle"]
visible = false
position = Vector2( 629, 274 )
scale = Vector2( 1.11515, 1.27947 )
texture = ExtResource( 24 )

[node name="Avatar-7" type="Sprite" parent="middle"]
visible = false
position = Vector2( 629, 307 )
scale = Vector2( 1.11515, 1.27947 )
texture = ExtResource( 26 )

[node name="Frame-1" type="Sprite" parent="middle"]
visible = false
position = Vector2( 624.575, 321.448 )
scale = Vector2( 1.50212, 1.71498 )
texture = ExtResource( 20 )

[node name="Frame-2" type="Sprite" parent="middle"]
visible = false
position = Vector2( 624.575, 321.448 )
scale = Vector2( 1.50212, 1.71498 )
texture = ExtResource( 28 )

[node name="Frame-3" type="Sprite" parent="middle"]
visible = false
position = Vector2( 624.575, 321.448 )
scale = Vector2( 1.50212, 1.71498 )
texture = ExtResource( 29 )

[node name="Frame-4" type="Sprite" parent="middle"]
visible = false
position = Vector2( 624.575, 321.448 )
scale = Vector2( 1.50212, 1.71498 )
texture = ExtResource( 30 )

[node name="Frame-5" type="Sprite" parent="middle"]
visible = false
position = Vector2( 624.575, 321.448 )
scale = Vector2( 1.50212, 1.71498 )
texture = ExtResource( 31 )

[node name="Frame-6" type="Sprite" parent="middle"]
visible = false
position = Vector2( 624.575, 321.448 )
scale = Vector2( 1.50212, 1.71498 )
texture = ExtResource( 33 )

[node name="Frame-7" type="Sprite" parent="middle"]
visible = false
position = Vector2( 624.575, 321.448 )
scale = Vector2( 1.50212, 1.71498 )
texture = ExtResource( 32 )

[connection signal="pressed" from="PlayOnline" to="." method="play"]
[connection signal="pressed" from="Options" to="." method="options"]
[connection signal="pressed" from="Notifications" to="." method="notifications"]
[connection signal="animation_finished" from="BannerUpdate/AnimationPlayer" to="." method="banner_animation_finished"]
[connection signal="pressed" from="WalletConnect" to="." method="connect_wallet"]
[connection signal="pressed" from="Discord" to="." method="discord"]
[connection signal="pressed" from="Twitter" to="." method="twitter"]
[connection signal="pressed" from="Shop" to="." method="shop"]
[connection signal="options_saved" from="Overlay/OptionsOverlay/OptionsMenu" to="." method="_on_OptionsMenu_options_saved"]
[connection signal="pressed" from="Overlay/OfflineOverlay/Container/Info/HMenu/Cancel" to="." method="cancel_offline_game"]
[connection signal="pressed" from="Overlay/OfflineOverlay/Container/Info/HMenu/Create" to="." method="create_offline_game"]
[connection signal="pressed" from="Overlay/QuitConfirm/ColorRect/MarginContainer/VMenu/quit_confirm" to="." method="quit_confirm"]
[connection signal="pressed" from="Overlay/QuitConfirm/ColorRect/MarginContainer/VMenu/quit_cancel" to="." method="quit_cancel"]

[editable path="Overlay/OfflineOverlay/Container/Info/HMenu/Cancel"]
